# ChangeLog for dev-python/pyscard
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyscard/ChangeLog,v 1.4 2014/08/10 21:17:49 slyfox Exp $

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> pyscard-1.6.12.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  21 Dec 2012; Alon Bar-Lev <alonbl@gentoo.org> pyscard-1.6.12.ebuild:
  Add swig dependency, per bug#415301, thanks to Kristian

  21 Feb 2012; Patrick Lauer <patrick@gentoo.org> pyscard-1.6.12.ebuild:
  Adding pscs-lite dep for #403803

*pyscard-1.6.12 (03 Apr 2011)

  03 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +pyscard-1.6.12.ebuild, +metadata.xml:
  Initial addition. Ebuild written by me.