@@ -2,13 +2,26 @@
 Hash: SHA256
 
 DIST pyscard-1.6.12.tar.gz 184798 SHA256 0f70f8dd909497183bc1446fe7ea8b4498c7d1516269200f90cd0eec1fa6d630 SHA512 8559ab4a386adf5b91773dbe0211c71c33000a99f889d3d1bec2a8bccf7c7b811bc25dac84a15a1d72ac161001160a8ccff6d6beffccedeb8123d08136b85a81 WHIRLPOOL 800eda0b7b609245b65812b08ea6c227d01b6f2f79798b34c2bf688116b0d64b497691a2efbe9dca066881b07efbcbc8b1f6e1430a6af5eab01c413af9ac4455
+EBUILD pyscard-1.6.12-r1.ebuild 678 SHA256 8465039888375927cbd72a305335260b2d5e132dcba2c366a1830950bf8e0a4e SHA512 a3dc809ff648cc53785b05392b592f4c4ee9c85d7331b05c42c0437f79ec0c85749a59223fd886c86cb58b8ec66101e831d29563cf4d8c3cf018e77d02daf02f WHIRLPOOL 191cce7d7eb8f4f3fe2f2988095dfe92eb6675289ec8bc65a113e6aabcef0a3c19352168d1786f8bfa574b842b2bea54967cf64e7425d912c90b4b6a066fc989
 EBUILD pyscard-1.6.12.ebuild 741 SHA256 cbfaf8f4b019eb9bdda04670cdca5b85fadf7c10687797b62bb11a1609644d09 SHA512 8f963a73a556a752a5eb29c0f8748893757525f710f0f39b8befc7795e4c4e77b28c785447ce26cd6c37da611f3b7b13e6133824a35fd72906d4595ec8c2738d WHIRLPOOL 66b61e2e4ca556fb2b22efb3c604fc90e0721dc9d679dcd40893fc7e89d9c944397762471519af8fe8771e7827267eddf10db8b56cf7127cd1f3fb30a2293536
-MISC ChangeLog 754 SHA256 b644c9052e307c5601a45cbe4cc8cd7f5a911a37cf7c5d3a1375282b5ad3d58d SHA512 99cfb346a878906ac87bd177ba267d7aa083eb40f79b92a1a631bd2e62313e20279e8f17eb6092d9fc40e6ab6ed78f24f93af58e87d13165d3df602448af8b17 WHIRLPOOL 0a7f4b4e6793cd86691510c40f0fb124db0121e037b8b0ba10c916dcb11896178290b88c29b659cd1d1fc0ff352f4cf97d434fee02d7317a1cd7fac416767a89
+MISC ChangeLog 893 SHA256 7c15190183c56f3fb1aa4bd743618c807215a716c3200af75f14e48aac3ac691 SHA512 9e8eb27ee05b2c7662d70683672359e9df09a9288d21d981edc0f965f7c76d98846f5075c98fe907afe5bee89c83654d01155483099ed6dc9263302d99de6030 WHIRLPOOL f1d257c1efd49e1563a659ee8489e80d2b8e5722bf4739a6ead05267f57144a890284cccffe5ca01a0fb840527df9ad667769c20d3b698a392c4bf6f26141e15
 MISC metadata.xml 181 SHA256 597c4fbc001fcea458f51da8294c90143c499ab69a1b44fc18df1098286c8ddd SHA512 c5d93e84830aa3b823fe46e6ece57ffd09a5708e7a895b4470d7bcc680093dbec34df23909baee043c464c4aaf8a5c69c0b66b794d86437c745e4721c4743db9 WHIRLPOOL 66ef32743661703edf34062ed18413c2bc737c4c1f737cc73bc4e7c41b558b97a9f9281dfc270e45a8e18dc29e219ad1bb1c7bf1ac8727a5b72d75184f6d5c72
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn4X4ACgkQcaHudmEf86rSkACeLC3n639Ar48FV+pnrMXi7IDg
-Bf4Amwa0qgBpnSTLELCGUw32gRuvexrj
-=3u7V
+iQJ8BAEBCABmBQJUnJ9MXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOIWYQAKpy/7O6mLinnw3pWTPwyGhi
+U7AZzX3VcUaobvc538ph2VfIfUjj6dfk3/+x4DLR9tVTxRs1FAkIFQ89WTA7iVhq
+lw+LasBX5kCMyXRqohjMMEiVMyAPU4u/TtfzVBc4UYDOlN464KgN1FyNse3O6gxM
+0bBxqByH4lglkI44G44QKrS7E8lADR5WGaDGM+agfmXdyJ4CM7n62uY/kF63HACJ
+ZwleGQVyrCIHjQDMDeVR/w0kGi9MOaAQ6As+8buDp48/f+FsgrRZDuEO2p+GSIji
+azU3V4KsEfspngya8eINYdx7MO0Jb/vaVebHwaN6ZQfE+HW+CR7BgydA0x7jbiCV
+kHAhV+S+tueuVawXIfRfZT5Abb4IQ7T059Y6yZLoCZ26slHrHEXc6i1PDib9B/P0
+ojWiL5+V6CLD13WJL9V1jJlqvGMMC4JIFk2x/j1/d5mrJ8S1MBZu5vxWJtzd298M
+wKt2xDaPrhZmVqpV6ssSpU74a1kiTTBdPi3JX+SySKkOQmmdY39gTPn5djlRrA87
+pI515ODlyDF5Dr4yiMMhVApqsn6dJlMrGyuqdDVOf+FzeUmTWhoKUBszmgli+f0E
+0Mzb+CM2ucLvHVWBLLoGFkMLKrlHaDaMS5RiMjI8spGMT69/jQ4aMH04If3RH9lo
+LXhopIGe0KvsnK3A34XB
+=QyWy
 -----END PGP SIGNATURE-----
