@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pyscard
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyscard/ChangeLog,v 1.4 2014/08/10 21:17:49 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyscard/ChangeLog,v 1.5 2014/12/25 23:35:39 mgorny Exp $
+
+*pyscard-1.6.12-r1 (25 Dec 2014)
+
+  25 Dec 2014; Michał Górny <mgorny@gentoo.org> +pyscard-1.6.12-r1.ebuild:
+  Convert to distutils-r1.
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> pyscard-1.6.12.ebuild:
   QA: drop trailing '.' from DESCRIPTION
